// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`design-tokens primitive aliases have been copied from @salesforce-ux/design-system-primitive-tokens 1`] = `
Array [
  "border-radius.yml",
  "border-width.yml",
  "color-palettes.yml",
  "colors.yml",
  "duration.yml",
  "font-family.yml",
  "font-size.yml",
  "font-weight.yml",
  "offset.yml",
  "sizing.yml",
  "spacing.yml",
]
`;

exports[`design-tokens primitive tokens are found in ui-force file 1`] = `
Array [
  "PALETTE_BLUE_10",
  "PALETTE_BLUE_65",
  "PALETTE_BLUE_15",
  "PALETTE_BLUE_90",
  "PALETTE_BLUE_80",
  "PALETTE_BLUE_70",
  "PALETTE_BLUE_60",
  "PALETTE_BLUE_50",
  "PALETTE_BLUE_40",
  "PALETTE_BLUE_95",
  "PALETTE_BLUE_30",
  "PALETTE_BLUE_20",
  "PALETTE_CLOUD_BLUE_90",
  "PALETTE_CLOUD_BLUE_80",
  "PALETTE_CLOUD_BLUE_70",
  "PALETTE_CLOUD_BLUE_60",
  "PALETTE_CLOUD_BLUE_50",
  "PALETTE_CLOUD_BLUE_40",
  "PALETTE_CLOUD_BLUE_95",
  "PALETTE_CLOUD_BLUE_30",
  "PALETTE_CLOUD_BLUE_20",
  "PALETTE_CLOUD_BLUE_10",
  "PALETTE_CLOUD_BLUE_65",
  "PALETTE_CLOUD_BLUE_15",
  "PALETTE_GREEN_15",
  "PALETTE_GREEN_90",
  "PALETTE_GREEN_80",
  "PALETTE_GREEN_70",
  "PALETTE_GREEN_60",
  "PALETTE_GREEN_50",
  "PALETTE_GREEN_40",
  "PALETTE_GREEN_95",
  "PALETTE_GREEN_30",
  "PALETTE_GREEN_20",
  "PALETTE_GREEN_10",
  "PALETTE_GREEN_65",
  "PALETTE_HOT_ORANGE_90",
  "PALETTE_HOT_ORANGE_80",
  "PALETTE_HOT_ORANGE_70",
  "PALETTE_HOT_ORANGE_60",
  "PALETTE_HOT_ORANGE_50",
  "PALETTE_HOT_ORANGE_40",
  "PALETTE_HOT_ORANGE_95",
  "PALETTE_HOT_ORANGE_30",
  "PALETTE_HOT_ORANGE_20",
  "PALETTE_HOT_ORANGE_10",
  "PALETTE_HOT_ORANGE_65",
  "PALETTE_HOT_ORANGE_15",
  "PALETTE_INDIGO_90",
  "PALETTE_INDIGO_80",
  "PALETTE_INDIGO_70",
  "PALETTE_INDIGO_60",
  "PALETTE_INDIGO_50",
  "PALETTE_INDIGO_40",
  "PALETTE_INDIGO_95",
  "PALETTE_INDIGO_30",
  "PALETTE_INDIGO_20",
  "PALETTE_INDIGO_10",
  "PALETTE_INDIGO_65",
  "PALETTE_INDIGO_15",
  "PALETTE_NEUTRAL_90",
  "PALETTE_NEUTRAL_80",
  "PALETTE_NEUTRAL_70",
  "PALETTE_NEUTRAL_100",
  "PALETTE_NEUTRAL_60",
  "PALETTE_NEUTRAL_50",
  "PALETTE_NEUTRAL_40",
  "PALETTE_NEUTRAL_95",
  "PALETTE_NEUTRAL_30",
  "PALETTE_NEUTRAL_20",
  "PALETTE_NEUTRAL_10",
  "PALETTE_ORANGE_90",
  "PALETTE_ORANGE_80",
  "PALETTE_ORANGE_70",
  "PALETTE_ORANGE_60",
  "PALETTE_ORANGE_50",
  "PALETTE_ORANGE_40",
  "PALETTE_ORANGE_95",
  "PALETTE_ORANGE_30",
  "PALETTE_ORANGE_20",
  "PALETTE_ORANGE_10",
  "PALETTE_ORANGE_65",
  "PALETTE_ORANGE_15",
  "PALETTE_PINK_50",
  "PALETTE_PINK_40",
  "PALETTE_PINK_95",
  "PALETTE_PINK_30",
  "PALETTE_PINK_20",
  "PALETTE_PINK_65",
  "PALETTE_PINK_10",
  "PALETTE_PINK_15",
  "PALETTE_PINK_90",
  "PALETTE_PINK_80",
  "PALETTE_PINK_70",
  "PALETTE_PINK_60",
  "PALETTE_PURPLE_15",
  "PALETTE_PURPLE_90",
  "PALETTE_PURPLE_80",
  "PALETTE_PURPLE_70",
  "PALETTE_PURPLE_60",
  "PALETTE_PURPLE_50",
  "PALETTE_PURPLE_40",
  "PALETTE_PURPLE_95",
  "PALETTE_PURPLE_30",
  "PALETTE_PURPLE_20",
  "PALETTE_PURPLE_10",
  "PALETTE_PURPLE_65",
  "PALETTE_RED_90",
  "PALETTE_RED_80",
  "PALETTE_RED_70",
  "PALETTE_RED_60",
  "PALETTE_RED_50",
  "PALETTE_RED_95",
  "PALETTE_RED_40",
  "PALETTE_RED_30",
  "PALETTE_RED_20",
  "PALETTE_RED_10",
  "PALETTE_RED_65",
  "PALETTE_RED_15",
  "PALETTE_TEAL_15",
  "PALETTE_TEAL_90",
  "PALETTE_TEAL_80",
  "PALETTE_TEAL_70",
  "PALETTE_TEAL_60",
  "PALETTE_TEAL_50",
  "PALETTE_TEAL_40",
  "PALETTE_TEAL_95",
  "PALETTE_TEAL_30",
  "PALETTE_TEAL_20",
  "PALETTE_TEAL_10",
  "PALETTE_TEAL_65",
  "PALETTE_VIOLET_15",
  "PALETTE_VIOLET_90",
  "PALETTE_VIOLET_80",
  "PALETTE_VIOLET_70",
  "PALETTE_VIOLET_60",
  "PALETTE_VIOLET_50",
  "PALETTE_VIOLET_40",
  "PALETTE_VIOLET_95",
  "PALETTE_VIOLET_30",
  "PALETTE_VIOLET_20",
  "PALETTE_VIOLET_10",
  "PALETTE_VIOLET_65",
  "PALETTE_YELLOW_70",
  "PALETTE_YELLOW_60",
  "PALETTE_YELLOW_50",
  "PALETTE_YELLOW_40",
  "PALETTE_YELLOW_95",
  "PALETTE_YELLOW_30",
  "PALETTE_YELLOW_20",
  "PALETTE_YELLOW_10",
  "PALETTE_YELLOW_65",
  "PALETTE_YELLOW_15",
  "PALETTE_YELLOW_90",
  "PALETTE_YELLOW_80",
  "COLOR_BACKGROUND_ROW_ACTIVE",
  "COLOR_BACKGROUND_LIGHT",
  "COLOR_BACKGROUND_ROW_HOVER",
  "COLOR_BACKGROUND_ERROR_DARK",
  "COLOR_BACKGROUND_INFO",
  "COLOR_BACKGROUND_ALT_INVERSE",
  "COLOR_BACKGROUND_ROW_NEW",
  "COLOR_BACKGROUND_SUCCESS_DARK",
  "COLOR_BACKGROUND_STENCIL",
  "COLOR_BACKGROUND_WARNING",
  "COLOR_BACKGROUND_HIGHLIGHT_SEARCH",
  "COLOR_BACKGROUND_DESTRUCTIVE_HOVER",
  "COLOR_BACKGROUND",
  "COLOR_BRAND_DARK",
  "COLOR_BACKGROUND_BACKDROP",
  "COLOR_BACKGROUND_DARK",
  "COLOR_BRAND",
  "COLOR_BACKGROUND_DESTRUCTIVE",
  "COLOR_BACKGROUND_SUCCESS",
  "COLOR_BACKGROUND_WARNING_DARK",
  "COLOR_BACKGROUND_OFFLINE",
  "COLOR_BACKGROUND_STENCIL_ALT",
  "COLOR_BACKGROUND_INVERSE_LIGHT",
  "COLOR_BACKGROUND_CUSTOMER",
  "COLOR_BACKGROUND_ERROR",
  "COLOR_BACKGROUND_ALT",
  "COLOR_BACKGROUND_SUCCESS_DARKER",
  "COLOR_BACKGROUND_ROW_SELECTED",
  "COLOR_BRAND_DARKER",
  "COLOR_BACKGROUND_SELECTION",
  "COLOR_BACKGROUND_DESTRUCTIVE_ACTIVE",
  "COLOR_BACKGROUND_INVERSE",
  "COLOR_BACKGROUND_HIGHLIGHT",
  "COLOR_BORDER_ERROR_DARK",
  "COLOR_BORDER_BRAND_DARK",
  "COLOR_BORDER_INFO",
  "COLOR_BORDER_WARNING",
  "COLOR_BORDER_DESTRUCTIVE_HOVER",
  "COLOR_BORDER",
  "COLOR_BORDER_SUCCESS_DARK",
  "COLOR_BORDER_DESTRUCTIVE",
  "COLOR_BORDER_SEPARATOR_ALT_2",
  "COLOR_BORDER_OFFLINE",
  "COLOR_BORDER_SUCCESS",
  "COLOR_BORDER_SEPARATOR",
  "COLOR_BORDER_BRAND",
  "COLOR_BORDER_SELECTION_ACTIVE",
  "COLOR_BORDER_ERROR",
  "COLOR_BORDER_SELECTION_HOVER",
  "COLOR_BORDER_ROW_SELECTED_HOVER",
  "COLOR_BORDER_CUSTOMER",
  "COLOR_BORDER_SELECTION",
  "COLOR_BORDER_ROW_SELECTED",
  "COLOR_BORDER_SEPARATOR_ALT",
  "COLOR_BORDER_INVERSE",
  "COLOR_BORDER_DESTRUCTIVE_ACTIVE",
  "COLOR_BORDER_ERROR_ALT",
  "COLOR_BORDER_SEPARATOR_INVERSE",
  "BORDER_RADIUS_SMALL",
  "BORDER_RADIUS_MEDIUM",
  "BORDER_RADIUS_LARGE",
  "BORDER_RADIUS_CIRCLE",
  "BORDER_WIDTH_THIN",
  "BORDER_WIDTH_THICK",
  "SHADOW_ACTIVE",
  "SHADOW_DRAG",
  "SHADOW_DROP_DOWN",
  "DURATION_INSTANTLY",
  "DURATION_IMMEDIATELY",
  "DURATION_QUICKLY",
  "DURATION_PROMPTLY",
  "DURATION_SLOWLY",
  "DURATION_PAUSED",
  "FONT_FAMILY",
  "FONT_FAMILY_HEADING",
  "FONT_FAMILY_MONOSPACE",
  "FONT_SIZE_1",
  "FONT_SIZE_2",
  "FONT_SIZE_3",
  "VAR_FONT_SIZE_10",
  "FONT_SIZE_4",
  "VAR_FONT_SIZE_11",
  "FONT_SIZE_5",
  "FONT_SIZE_6",
  "FONT_SIZE_7",
  "FONT_SIZE_8",
  "VAR_FONT_SIZE_1",
  "FONT_SIZE_9",
  "VAR_FONT_SIZE_2",
  "VAR_FONT_SIZE_3",
  "FONT_SIZE_10",
  "VAR_FONT_SIZE_4",
  "FONT_SIZE_11",
  "VAR_FONT_SIZE_5",
  "VAR_FONT_SIZE_6",
  "VAR_FONT_SIZE_7",
  "VAR_FONT_SIZE_8",
  "VAR_FONT_SIZE_9",
  "FONT_WEIGHT_LIGHT",
  "FONT_WEIGHT_REGULAR",
  "FONT_WEIGHT_BOLD",
  "LINE_HEIGHT_HEADING",
  "LINE_HEIGHT_TEXT",
  "LINE_HEIGHT_RESET",
  "VAR_LINE_HEIGHT_TEXT",
  "OPACITY_5",
  "OPACITY_8",
  "BRAND_HEADER_CONTRAST_WEAK_DISABLED",
  "COLOR_GRAY_11",
  "BRAND_PRIMARY_TRANSPARENT_10",
  "COLOR_GRAY_12",
  "BRAND_BACKGROUND_DARK_TRANSPARENT",
  "COLOR_GRAY_13",
  "BRAND_HEADER",
  "BRAND_LIGHT_ACTIVE",
  "BRAND_HEADER_CONTRAST_WARM",
  "BRAND_HEADER_ICON_DISABLED",
  "BRAND_HEADER_CONTRAST_ACTIVE",
  "BRAND_BACKGROUND_PRIMARY",
  "BRAND_PRIMARY",
  "BRAND_HEADER_CONTRAST_WEAK_ACTIVE",
  "BRAND_CONTRAST_ACTIVE",
  "BRAND_HEADER_CONTRAST_COOL",
  "BRAND_HEADER_CONTRAST_INVERSE",
  "BRAND_DARK",
  "BRAND_ACCESSIBLE",
  "BRAND_BACKGROUND_DARK",
  "BRAND_TEXT_LINK_ACTIVE",
  "COLOR_GRAY_1",
  "COLOR_GRAY_2",
  "BRAND_HEADER_ICON_ACTIVE",
  "COLOR_GRAY_3",
  "BRAND_HEADER_ICON",
  "BRAND_DISABLED",
  "BRAND_TEXT_LINK",
  "COLOR_GRAY_4",
  "COLOR_GRAY_5",
  "COLOR_GRAY_6",
  "BRAND_ACCESSIBLE_ACTIVE",
  "COLOR_GRAY_7",
  "BRAND_DARK_ACTIVE",
  "COLOR_GRAY_8",
  "BRAND_HEADER_CONTRAST_INVERSE_ACTIVE",
  "BRAND_HEADER_CONTRAST_COOL_ACTIVE",
  "COLOR_GRAY_9",
  "BRAND_CONTRAST",
  "BRAND_HEADER_CONTRAST_WEAK",
  "BRAND_PRIMARY_ACTIVE",
  "BRAND_BACKGROUND_PRIMARY_TRANSPARENT",
  "BRAND_HEADER_CONTRAST",
  "BRAND_PRIMARY_TRANSPARENT",
  "BRAND_HEADER_CONTRAST_WARM_ACTIVE",
  "BRAND_PRIMARY_TRANSPARENT_40",
  "BRAND_LIGHT",
  "COLOR_GRAY_10",
  "SIZE_X_SMALL",
  "SIZE_XXX_SMALL",
  "SQUARE_ICON_UTILITY_LARGE",
  "SIZE_XX_SMALL",
  "SQUARE_ICON_SMALL_BOUNDARY",
  "SIZE_SMALL",
  "SQUARE_ICON_UTILITY_MEDIUM",
  "SQUARE_ICON_X_SMALL_BOUNDARY",
  "SQUARE_ICON_UTILITY_SMALL",
  "SQUARE_ICON_MEDIUM_BOUNDARY",
  "SQUARE_ICON_LARGE_CONTENT",
  "SQUARE_ICON_LARGE_BOUNDARY",
  "SIZE_MEDIUM",
  "SQUARE_ICON_MEDIUM_CONTENT",
  "SIZE_X_LARGE",
  "SQUARE_ICON_X_SMALL_CONTENT",
  "VAR_SQUARE_ICON_MEDIUM_BOUNDARY",
  "SQUARE_ICON_MEDIUM_BOUNDARY_ALT",
  "SIZE_XX_LARGE",
  "SQUARE_ICON_LARGE_BOUNDARY_ALT",
  "SIZE_LARGE",
  "SQUARE_ICON_SMALL_CONTENT",
  "SQUARE_ICON_XX_SMALL_BOUNDARY",
  "SQUARE_ICON_MEDIUM_CONTENT_ALT",
  "VAR_SPACING_X_LARGE",
  "VAR_SPACING_HORIZONTAL_SMALL",
  "VAR_SPACING_HORIZONTAL_XX_LARGE",
  "SPACING_X_SMALL",
  "SPACING_XXX_SMALL",
  "SPACING_XX_SMALL",
  "VAR_SPACING_VERTICAL_LARGE",
  "VAR_SPACING_LARGE",
  "VAR_SPACING_MEDIUM",
  "VAR_SPACING_VERTICAL_MEDIUM",
  "VAR_SPACING_VERTICAL_X_SMALL",
  "SPACING_SMALL",
  "VAR_SPACING_VERTICAL_XXX_SMALL",
  "VAR_SPACING_X_SMALL",
  "VAR_SPACING_XXX_SMALL",
  "VAR_SPACING_HORIZONTAL_X_LARGE",
  "VAR_SPACING_HORIZONTAL_XX_SMALL",
  "VAR_SPACING_XX_LARGE",
  "SPACING_MEDIUM",
  "VAR_SPACING_VERTICAL_XX_LARGE",
  "VAR_SPACING_VERTICAL_SMALL",
  "VAR_SPACING_SMALL",
  "SPACING_NONE",
  "VAR_SPACING_HORIZONTAL_LARGE",
  "SPACING_X_LARGE",
  "SPACING_XX_LARGE",
  "VAR_SPACING_HORIZONTAL_XXX_SMALL",
  "VAR_SPACING_HORIZONTAL_X_SMALL",
  "VAR_SPACING_XX_SMALL",
  "VAR_SPACING_HORIZONTAL_MEDIUM",
  "VAR_SPACING_VERTICAL_XX_SMALL",
  "VAR_SPACING_VERTICAL_X_LARGE",
  "SPACING_LARGE",
  "COLOR_TEXT_ACTION_LABEL",
  "COLOR_TEXT_LINK_INVERSE",
  "COLOR_TEXT_LINK_INVERSE_ACTIVE",
  "COLOR_TEXT_ACTION_LABEL_ACTIVE",
  "COLOR_TEXT_WARNING",
  "COLOR_TEXT_LINK_FOCUS",
  "COLOR_TEXT_DESTRUCTIVE_HOVER",
  "COLOR_TEXT_LINK_DISABLED",
  "COLOR_TEXT_DEFAULT",
  "COLOR_TEXT_DESTRUCTIVE",
  "COLOR_TEXT_LINK_HOVER",
  "COLOR_TEXT_SUCCESS",
  "COLOR_TEXT_WEAK",
  "COLOR_TEXT_PLACEHOLDER_INVERSE",
  "COLOR_TEXT_LINK",
  "COLOR_TEXT_WARNING_ALT",
  "COLOR_TEXT_ICON_DEFAULT",
  "COLOR_TEXT_BRAND",
  "COLOR_TEXT_ERROR",
  "COLOR_TEXT_CUSTOMER",
  "COLOR_TEXT_BRAND_PRIMARY",
  "COLOR_TEXT_LINK_ACTIVE",
  "COLOR_TEXT_REQUIRED",
  "COLOR_TEXT_LINK_INVERSE_DISABLED",
  "COLOR_TEXT_INVERSE",
  "COLOR_TEXT_PLACEHOLDER",
  "COLOR_TEXT_INVERSE_WEAK",
  "COLOR_TEXT_LINK_INVERSE_HOVER",
  "COLOR_TEXT_SUCCESS_INVERSE",
  "COLOR_TEXT_LABEL",
  "SQUARE_TAPPABLE",
  "SQUARE_TAPPABLE_SMALL",
  "SQUARE_TAPPABLE_X_SMALL",
  "SQUARE_TAPPABLE_XX_SMALL",
  "HEIGHT_TAPPABLE",
  "HEIGHT_TAPPABLE_SMALL",
  "Z_INDEX_DROPDOWN",
  "Z_INDEX_DOCKED",
  "Z_INDEX_REMINDER",
  "Z_INDEX_SPINNER",
  "Z_INDEX_DEFAULT",
  "Z_INDEX_DEEPDIVE",
  "Z_INDEX_TOAST",
  "Z_INDEX_DIALOG",
  "Z_INDEX_POPUP",
  "Z_INDEX_MODAL",
  "Z_INDEX_STICKY",
  "Z_INDEX_OVERLAY",
]
`;

exports[`design-tokens primitive tokens have been copied from @salesforce-ux/design-system-primitive-tokens 1`] = `
Array [
  "background-color.yml",
  "base.yml",
  "border-color.yml",
  "border-radius.yml",
  "border-width.yml",
  "box-shadow.yml",
  "duration.yml",
  "font-family.yml",
  "font-size.yml",
  "font-weight.yml",
  "line-height.yml",
  "opacity.yml",
  "palette-colors.yml",
  "palettes",
  "sizing.yml",
  "spacing.yml",
  "text-color.yml",
  "touch.yml",
  "z-index.yml",
]
`;
